Load data dynamically for Map and Item modal
- Support data that contain multiple messages
- Add number of message next to 'File' (column 'Item')

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -43,7 +43,10 @@
 	word-wrap: break-word;
 	padding: 0;
 }
-
+#datasource-table .badge {
+	vertical-align: text-bottom;
+	font-size: 10px;
+}
 #datasource-table .col-source-url {
 	text-overflow: ellipsis;
 	white-space: nowrap;
