Fixed map not showing error

--- a/app/views/startup.html
+++ b/app/views/startup.html
@@ -1,3 +1,10 @@
-<div class="content-wrapper map-view map-container-parent">
-   <div id="map"></div>
-</div>
+<style type="text/css">
+#map2
+{
+width:100%;
+height:92vh;
+}
+</style>
+
+
+   <div id="map2"></div>
