--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -66,6 +66,24 @@
 		</li>
 		</ul>
 	</div>
+	<div id="my-connection-panel">
+		<h1>Active Apps</h1> 
+		<div class="alert alert-success alert-dismissible" role="alert" ng-show="dataSourceMessages.success">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		</div>
+		<div class="alert alert-error alert-dismissible" role="alert" ng-show="dataSourceMessages.error">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		</div>
+		<hr/>
+		<ul id="datasource-table">
+		<div class="row">
+			<div class="col-lg-4"><i class="fa fa-angellist fa-4x"></i><h3>Angel List</h3></div>
+			<div class="buttonPanel pull-right">
+			<a href="https://angel.co/api/oauth/authorize?client_id=f148a48d308ee0ee11eb938a2f2f88bff24abb235412f596&response_type=code"><button class="btn btn-loklak-blue btn-lg">Add App</button></a>
+			</div>
+		</div>
+		</ul>
+	</div>
 	<div add-connection-modal></div>
 	<button id="open-confirm-modal" class="hide" data-toggle="modal" data-target="#confirm-delete-modal">Delete</button>
 	<div id="confirm-delete-modal" class="modal" role="dialog">
@@ -85,6 +103,7 @@
 		</div>
 	</div>
 	</div>
+
 	<!-- Search box for anonymous user-no-followers -->
 	<div ng-include src="'anonymous-session-content.html'"></div>
 	<!-- End search box for anonymous users -->
