Fix map view issues
- call invalidateSize() for leaflet map to behave well with bootstrap modal
- center map to first message location
- clear previous markers before adding new ones
- open all popups on modal open

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -181,6 +181,10 @@
 #source-info-form .fa-check {
 	color: green;
 }
+#single-data-map .single-tweet .user-data-wrapper .name, 
+#single-data-map .single-tweet .user-data-wrapper .screen-name {
+	font-size: 1em;
+}
 
 .source-type-item {
 	box-sizing: content-box;
