--- a/app/views/home.html
+++ b/app/views/home.html
@@ -35,6 +35,9 @@
                             <a href="">Followers<br><span>{{root.twitterSession.followers_count}}</span></a>
                         </div>
                     </div>
+                    <div class="user-info-text">
+                        {{root.twitterSession.description}}
+                    </div>
                 </div>
             </div>
 
