--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -27,7 +27,7 @@
 				<div class="col col-md-2">Last edit</div>
 				<div class="col col-md-1">Item</div>
 				<div class="col col-md-1">Map</div>
-				<div class="col col-md-1">Share</div>
+				<div class="col col-md-1">Shared by</div>
 			</div>
 		</li>
 		<li ng-repeat="item in dataSourceItems" ng-click="showRowDetail($event)">
@@ -38,7 +38,7 @@
 				<div class="col col-md-2" am-time-ago="item.last_modified"></div>
 				<div class="col col-md-1"><a data-toggle="modal" data-target="#message-view-modal" ng-click="setMessageView(item.imported)">File <span class="badge">{{item.imported.length}}</span></a></div>
 				<div class="col col-md-1"><a data-toggle="modal" data-target="#map-view-modal" ng-click="setMapView(item.imported)">View</a></div>
-				<div class="col col-md-1">{{item.screen_name}}</div>
+				<div class="col col-md-1">{{item.sharers | arraySize}}</div>
 			</div>
 			<div class="detail" ng-click="$event.stopPropagation();">
 				<div class="row">
