Fix bug PUBLIC input not working

--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -47,7 +47,7 @@
 						<label for="privacy">Public data</label>
 					</div>
 					<div class="col-md-10">
-						<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="item.privacy_status" ng-disabled="!item.editing"></toggle-switch>
+						<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="item.public" ng-disabled="!item.editing"></toggle-switch>
 					</div>
 				</div>
 				<div class="row">
