--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -66,7 +66,7 @@
 									</div>
 									<div class="form-group">
 										<label for="privacy">Public data</label>
-										<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="inputs.privacy_status"></toggle-switch>
+										<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="inputs.public"></toggle-switch>
 									</div>
 									<div class="form-group"><label>Advanced options <i id="toggle-show-data" class="fa" ng-class="showAdvancedOptions ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showAdvancedOptions = !showAdvancedOptions"></i></i>
 									</div>
