--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -412,13 +412,13 @@
 		.credits-container {
 			color: #8899a6;
 		    background: white;
-		    padding: 15px 20px;
-		    border: 1px solid #e1e8ed;
+		    padding: 15px;
+		    border: 1px solid rgb(225, 232, 237);
 		    margin-bottom: 20px;
 		    font-size: 15px;
 		    position: absolute;
 		    bottom: 0;
-		    width: 100%;
+		    width: 92%;
 		    left: 50%;
 		    max-width: 1200px;
 		    transform: translateX(-50%);
@@ -426,7 +426,7 @@
 			> div {
 				display: inline-block;
 				> span {
-					color: $search-twitter-blue;
+					color: #8899a6;
 					display: inline-block;
 					position: relative;
 					top: -2px;
@@ -435,11 +435,13 @@
 					opacity: 0.7;
 				}
 			}
-			.left-credits {
+			
+			.left-credits, .right-credits {
 				float: left;
-			}
-			.right-credits {
-				float: right;
+				a {
+					color: #8899a6;
+					font-size: 12px;
+				}
 			}
 		}
 	}
