--- a/app/views/home.html
+++ b/app/views/home.html
@@ -102,6 +102,16 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="credits-container">
+                <div class="credits">
+                    <a>© 2015 loklak</a><span>-</span>
+                    <a href="./about">About</a><span>-</span>
+                    <a href="http://blog.loklak.net/" target="_blank" >Blog</a><span>-</span>
+                    <a href="https://github.com/loklak" target="_blank" >Github</a><span>-</span>
+                    <a href="http://facebook.com/loklakmessages" target="_blank" >Facebook</a>
+                </div>
+            </div>
         </div>
 
     </div>
