--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 // Partials
 @import 'topnav';
 @import 'home';
+@import 'about';
 @import 'data-connect';
 @import 'retweet-modal';
 @import 'copy-link-modal';
