Add credits to about view as well

--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -1,6 +1,7 @@
 .container.about-view-container {
 	margin-left: auto !important;
 	margin-right: auto;
+	padding-bottom: 100px;
 	.about-jumbotron {
 		text-align: center;
 		.page-header {
