--- a/app/views/about.html
+++ b/app/views/about.html
@@ -31,4 +31,20 @@
       </div>
     </div>
   </div>
+
+  <div class="credits-container">
+      <div class="left-credits">
+          <a>© 2015 loklak</a><span>-</span>
+          <a href="./about">About</a><span>-</span>
+          <a href="http://blog.loklak.net/" target="_blank" >Blog</a><span>-</span>
+          <a href="https://github.com/loklak" target="_blank" >Github</a><span>-</span>
+          <a href="http://facebook.com/loklakmessages" target="_blank" >Facebook</a>
+      </div>
+      
+      <div class="right-credits">
+          
+      </div>
+
+  </div>
 </div>
+
