Change all followings to following

--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -147,7 +147,7 @@ td
                             <a href="">Tweets<br><span>{{tweetcount}}</span></a>
                         </div>
                         <div class="user-no-followings">
-                            <a href="">Followings<br><span>{{followingstotal}}</span></a>
+                            <a href="">Following<br><span>{{followingstotal}}</span></a>
                         </div>
                         <div class="user-no-followers">
                             <a href="">Followers<br><span>{{followerstotal}}</span></a>
@@ -255,7 +255,7 @@ td
                                             <a href="">Tweets<br><span>{{follower.statuses_count}}</span></a>
                                         </div>
                                         <div class="user-no-followings">
-                                            <a href="">Followings<br><span>{{follower.following}}</span></a>
+                                            <a href="">Following<br><span>{{follower.following}}</span></a>
                                         </div>
                                         <div class="user-no-followers">
                                             <a href="">Followers<br><span>{{follower.followers}}</span></a>
