Disable initial login modal, disable suggestions when clicking out of it

--- a/app/views/global-search-form.html
+++ b/app/views/global-search-form.html
@@ -2,7 +2,7 @@
     <input type="text" id="global-search-input"  name="q" autocomplete="off" placeholder="Search" ng-model="root.globalSearchTerm" ng-keydown="root.watchArrowFromSearchBox($event)">
     <i class="fa fa-search"></i>
     <ul class="suggestions" ng-show="root.haveSearchSuggestion">
-    	<li ng-repeat="suggestion in root.searchSuggestions | limitTo:5" ng-click="root.setGlobalSearchTerm(suggestion.query)" ng-mouseover="root.highlightSelection()">
+    	<li ng-repeat="suggestion in root.searchSuggestions | limitTo:5" ng-click="root.setGlobalSearchTerm(suggestion.query)" ng-mouseover="root.highlightSelection()" class="suggestion-item">
     		{{suggestion.query}}
     	</li>
     </ul>
