Delay getting trends a little bit to prevent failure in search request

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 
 <!-- Template for home view -->
-<div ng-show="!map.isShowingMapNotHome" class="content-wrapper home-view-content-wrapper" onload="root.getHashtagTrends()">
+<div ng-show="!map.isShowingMapNotHome" class="content-wrapper home-view-content-wrapper">
     <!-- Main content -->
     <div ng-show="root.twitterSession" class="container content-container">
       
